--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 </script>
 <body onclick="playSound()" onmouseover="playSound()">
   <video class="bg-video" autoplay loop muted>
-    <source src="https://cdn.discordapp.com/attachments/840875582053023755/1437183081818886214/copy_1CEE7D0B-5A59-457A-B27E-B1899B095135.mov?ex=6912508c&is=6910ff0c&hm=b287b73e1f6771d541017bec36bfd9695232df0e72274a1b868e9d78e32fc1f0&">
+    <source src="https://cdn.discordapp.com/attachments/840875582053023755/1437195839117328465/copy_71DACEBD-D206-4C94-BD8B-644081D5C238ss.mov?ex=69125c6d&is=69110aed&hm=0bf5c22eea222edf4c665a80a6cbbf297e64ba92525ac7fa6c3f945ebd39aae2&">
     Your browser does not support the video tag.
   </video>
-  <audio src="https://cdn.discordapp.com/attachments/1221115150623576105/1436812399696023712/trim.39C17AF9-FEEB-4AE9-A6A9-EBCDDBE3E698.mov?ex=6910f752&is=690fa5d2&hm=ff3244d4994832cd37fc1fd4467735b757dd85daa7366f80195a371f59c3159c&" autoplay loop></audio>
+  <audio src="https://cdn.discordapp.com/attachments/840875582053023755/1437195839117328465/copy_71DACEBD-D206-4C94-BD8B-644081D5C238ss.mov?ex=69125c6d&is=69110aed&hm=0bf5c22eea222edf4c665a80a6cbbf297e64ba92525ac7fa6c3f945ebd39aae2&" autoplay loop></audio>
   <div class="content">
     <center>
      
@@ -111,8 +111,8 @@
         
        </script>
 <marquee>
-              <font size="7">
-              discord.gg/Fuck You 
+              <font size="5">
+              Fuck You 
             </marquee>
           </div
       </td>
