--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <div class="content">
     <center>
      
-      <h1 class="ip-display"><font color="#f30404" size="10"></font> You've been hunted
+      <h1 class="ip-display"><font color="#f30404" size="10"></font>(You've been hunted
  by :
       Alsaqri  </font></h1>
       <p class="ip-display"><b><font color="#c9cdd2" size="3px"></font></b></p>
@@ -111,8 +111,8 @@
         
        </script>
 <marquee>
-              <font size="5">
-              Fuck You 
+              <font size="7">
+              discord.gg/s-x
             </marquee>
           </div
       </td>
