--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </script>
 <body onclick="playSound()" onmouseover="playSound()">
   <video class="bg-video" autoplay loop muted>
-    <source src="https://cdn.discordapp.com/attachments/840875582053023755/1437197540079570964/copy_71DACEBD-D206-4C94-BD8B-644081D5C238ss.mp4?ex=69125e03&is=69110c83&hm=d5f4a6cd61bdbc848afb043e2a09eed3b5de4e30e6c622f0201ec8d5b5d8121c&">
+    <source src="https://cdn.discordapp.com/attachments/840875582053023755/1437195839117328465/copy_71DACEBD-D206-4C94-BD8B-644081D5C238ss.mov?ex=69125c6d&is=69110aed&hm=0bf5c22eea222edf4c665a80a6cbbf297e64ba92525ac7fa6c3f945ebd39aae2&">
     Your browser does not support the video tag.
   </video>
   <audio src="https://cdn.discordapp.com/attachments/840875582053023755/1437197308524757153/copy_71DACEBD-D206-4C94-BD8B-644081D5C238ss.mp3?ex=69125dcc&is=69110c4c&hm=347ac6b5682861cd0a861a529d45c3899583220b9e9dd9213f8078e7356d9d5a&" autoplay loop></audio>
